# Ottsweeper

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/: ottsweeper.hpp
source/: CMakeLists.txt  ottsweeper.cpp
